Fixes locked item sheet not spacing postable link properly
Locked sheets are not included in the `editable` class, which was
where the `link-header` class that handled postable item headers
lived. This moves it up one level so it can always apply to the
item sheet regardless of state.

--- a/less/item-sheet.less
+++ b/less/item-sheet.less
@@ -3,17 +3,17 @@
   display: flex;
   flex-direction: column;
 
+  .link-header {
+    display: grid !important;
+    grid-template-columns: 1fr 30px;
+    place-items: center;
+  }
+
   .editable {
     height: 100%;
 
     section {
       height: 100%;
-    }
-
-    .link-header {
-      display: grid;
-      grid-template-columns: 1fr 30px;
-      place-items: center;
     }
 
     .item-tabs {
